Merge Bach.java